--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -1,14 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Comfortaa:wght@700&family=M+PLUS+2:wght@200;300&family=Montserrat&family=Open+Sans:wght@800&family=Oswald&family=Outfit:wght@300;700&family=Poppins:wght@400;900&family=Quicksand&family=Raleway:wght@300;900&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Comfortaa:wght@700&family=M+PLUS+2:wght@200;300&family=Montserrat&family=Open+Sans:wght@800&family=Oswald:wght@200&family=Outfit:wght@300;700&family=Poppins:wght@400;900&family=Quicksand&family=Raleway:wght@300;900&family=Roboto&display=swap');
-.containerdiv {
-    display:flex;
-    flex-direction: column;
-}
-h3 {
-    margin:0.7rem;
+
+h2 {
+    margin:1vh;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
+    font-size: 4vh;
     color: rgba(16, 0, 59, 0.952);
+}
+div#offers{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-style: solid;
+    overflow-y: scroll;
+    padding: 0vh 4vw 1.5vh 4vw;
+    border-radius: 1vh;
+    margin: 0.5vh 2vw;
+    opacity: 1;
+    width: 80vw;
+    height: 70vh;
+    background-color: #3374ffa6;
+    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(255,255,255,0);
 }
 p {
     font-family: 'Oswald', sans-serif;
@@ -17,31 +30,68 @@ p {
     font-size: 1rem;  
     color: rgba(34, 34, 34, 0.993);
 }
-.eachOffer{
-    background-color: rgba(211, 220, 228, 0.39);;
-    margin-top: 1rem;
+div.eachOffer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(211, 220, 228, 0.39);
+    padding: 1vh;
+    width: 80vw;
+    margin-top: 1vh;
     border-style: solid;
     border-color: slategrey;
-    border-radius: 8px;
+    border-radius: 1vh;
+    
 }
-button {
-    margin-bottom: 0.5rem;
-    margin-left:0.5rem; 
+div.eachOffer a{
+    color:black;
+}
+div.eachOffer h3{
+    font-size: 3vh;
+    margin: 1vh;
+}
+div.eachOffer p{
+
+    font-size: 2vh;
+}
+input.icon {
+    height: 4vh;
+    
+    margin-left:1vh; 
     font-family: 'Montserrat', sans-serif;
+}
+button#newOffer_Button{
+    font-family: 'Montserrat', sans-serif;
+    height: 5vh;
+    border-radius: 1vh;
+    background-color: #3374ffa6;
+    box-shadow: inset -1px 3px 8px 5px #3374ff, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(255,255,255,0);
+    font-size: 3vh;
+    width: 50vw;
 }
 form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 3rem;
+    row-gap: 3vh;
 }
 
-input {
+input.form_input {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.5rem;
+    font-size: 4vh;
+    text-align: center;
     border-style: solid;
     border-color: rgba(16, 0, 59, 0.952);
     border-radius: 4px;
 }
 
-.crearoferta {
-    margin-top: 1rem;
-    font-size: 1.7rem;
+button#createOffer_Button{
+    font-family: 'Montserrat', sans-serif;
+    height: 5vh;
+    border-radius: 1vh;
+    background-color: #3374ffa6;
+    box-shadow: inset -1px 3px 8px 5px #3374ff, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(255,255,255,0);
+    font-size: 3vh;
+    width: 50vw;
 }
