--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -30,7 +30,7 @@ header{
     justify-content: space-between;
     align-items: center; 
     width: 100vw;
-    height: 10vh;
+    height: 9.5vh;
     padding-inline-start: 20vw;
     background: url('https://img.freepik.com/vector-gratis/vector-tecnologia-circulo-bulbo-azul-claro-lampara-fondo-tecnologia_43778-422.jpg?size=626&ext=jpg') no-repeat center center/cover;
     z-index: 1;
@@ -121,7 +121,8 @@ div#root{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    row-gap: 3vh;
     overflow-y: scroll;
     background-color:#ffffffaf;
     width: 100%;
