--- a/views/home.pug
+++ b/views/home.pug
@@ -28,6 +28,8 @@ html
                 //-             p Salario: #{_offert.salary}
                 //-             p Empresa: #{_offert.company}
                 //-             p Descripción oferta: #{_offert.description}
+        form(action="/api/logout" method="POST")
+            input(type="submit" value="Logout")
         include ./footer.pug
             //- Home de admin
             //- input(
