--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -1,18 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Comfortaa:wght@700&family=M+PLUS+2:wght@200;300&family=Montserrat&family=Open+Sans:wght@800&family=Oswald&family=Outfit:wght@300;700&family=Poppins:wght@400;900&family=Quicksand&family=Raleway:wght@300;900&family=Roboto&display=swap');
 
-.containerdiv {
+h2 {
+    margin:1vh;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4vh;
+    color: rgba(16, 0, 59, 0.952);
+}
+div#root{
     display:flex;
     flex-direction: column;
-}
-.userdata {
-    display:flex;
-    flex-direction: column;
-}
-input {
-    margin-top: 0.5rem;
 }
 form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 3rem;
+    row-gap: 3vh;
+}
+div#userData {
+    display:flex;
+    flex-direction: column;
+}
+input.userData{
+    font-size: 3vh;
 }
 
 input {
