--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -94,6 +94,11 @@ li:hover {
     color:rgba(16, 0, 59, 0.952);
     background-color:  rgb(255, 255, 255);
 }
+.logout {
+    padding-left: 0px;
+    border: none;
+    background-color: transparent;
+}
 .title{
     padding: 0vw 17vw;
     margin-left: -6vw;
