--- a/views/header.pug
+++ b/views/header.pug
@@ -16,7 +16,7 @@ header
                     a(href="/favorites"): li Ofertas favoritas 
                     a(href="/profile"): li Perfil de usuario 
                     a(href="/"): li 
-                        form(action="/api/logout" method="POST")
+                        form(action="/api/logout" method="POST" class="logout")
                             input(type="submit" value="Logout" class="logout")
                     a(href="/users"): li Listado de usuarios 
                     a(href="/dashboard"): li Crear oferta
