--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -21,8 +21,8 @@ html
                                     p(id=("company"+index)) #{_offert.company}
                                     p(id=("salary"+index)) #{_offert.salary}
                             div
-                                input(id=("editIcon"+index) class="icon" type="image" src="https://www.pngfind.com/pngs/m/77-776933_computer-icons-pencil-editing-download-icon-design-edit.png" onclick=("getOffertToEdit("+index+")"))
-                                input(id=("deleteIcon"+index)  class="icon" type="image" src="https://library.kissclipart.com/20190905/yuq/kissclipart-can-icon-delete-icon-remove-icon-db41fa2db93fe7e0.png")
+                                input(id=("editIcon"+index) class="icon" type="image" src="./assets/icons/edit.png" onclick=("getOffertToEdit("+index+")"))
+                                input(id=("deleteIcon"+index)  class="icon" type="image" src="./assets/icons/delete.png" onclick=("deleteOffert("+index+")"))
                                     //- button(type="button" class="edit" onClick=nombreDeLaFuncion) Editar
                                     //- button(type="button" class="delete" onClick=nombreDeLaFuncion) Borrar   
                 div 
