condicional en el menu

--- a/views/header.pug
+++ b/views/header.pug
@@ -13,12 +13,16 @@ header
                     a(href="/", ): li  Inicio 
                     a(href="/signup"): li Registrarse 
                     a(href="/login"): li Ingresar
-                    a(href="/favorites"): li Ofertas favoritas 
-                    a(href="/profile"): li Perfil de usuario 
-                    a(href="/"): li 
-                        form(action="/api/logout" method="POST" class="logout")
-                            input(type="submit" value="Logout" class="logout")
-                    a(href="/users"): li Listado de usuarios 
-                    a(href="/dashboard"): li Crear oferta
+                    - let user = {loggedIn: true}
+                    if user.loggedIn
+                        a(href="/favorites"): li Ofertas favoritas 
+                        a(href="/profile"): li Perfil de usuario 
+                        a(href="/"): li 
+                            form(action="/api/logout" method="POST")
+                                input(type="submit" value="Logout" class="logout")
+                        - let logged = {admin: true}
+                        if logged.admin
+                            a(href="/users"): li Listado de usuarios 
+                            a(href="/dashboard"): li Crear oferta
     div(class="title") 
         h1 "Esto es el titulo de la app"    
