obtain id_user for functions favorites

--- a/views/home.pug
+++ b/views/home.pug
@@ -24,7 +24,7 @@ html
                     button(
                         type="submit"
                         value="home"
-                        id="search_Button
+                        id="search_Button"
                         onclick="changeWelcome(), search()") Search
         include ./footer.pug
 
