--- a/views/header.pug
+++ b/views/header.pug
@@ -11,18 +11,19 @@ header
                     class="desplegable"
                 )  
                     a(href="/", ): li  Inicio 
-                    a(href="/signup"): li Registrarse 
-                    a(href="/login"): li Ingresar
-                    - let user = {loggedIn: true}
-                    if user.loggedIn
+                    if !log.loggedIn
+                        a(href="/signup"): li Registrarse 
+                        a(href="/login"): li Ingresar
+                    if log.loggedIn
                         a(href="/favorites"): li Ofertas favoritas 
                         a(href="/profile"): li Perfil de usuario 
+                                            
+                    if log.admin
+                        a(href="/users"): li Listado de usuarios 
+                        a(href="/dashboard"): li Crear oferta
+                    if log.loggedIn
                         a(href="/"): li 
                             form(action="/api/logout" method="POST" class="logout")
                                 input(type="submit" value="Logout" class="logout")
-                        - let logged = {admin: false}
-                        if logged.admin
-                            a(href="/users"): li Listado de usuarios 
-                            a(href="/dashboard"): li Crear oferta
     div(class="title") 
         h1 "Esto es el titulo de la app"    
