--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -1,16 +1,17 @@
 doctype html
 html
     head
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         title= "Favorites"
         style 
+
             include ../public/styles/normalize.css
             include ../public/styles/general.css
             include ../public/styles/favorites.css
         script(src="./scripts/favorites.js")
     body
         include ./header.pug
-         main
+        main
             div(id= "root")
                 each _offert,index in _offerts           
                     div(class="eachOffer") 
@@ -18,9 +19,11 @@ html
                             h3(id=("title"+index)) #{_offert.title}
                             p(id=("salary"+index)) #{_offert.salary}
                             p(id=("company"+index)) #{_offert.company}
-                        button(
-                            id="favoriteIcon"
-                            onclick=("deleteFavorite("+index+")"))
-                                i.fas.fa-star(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css")
+                        input(
+                        id="favoriteIcon"
+                        class="icon"
+                        type="image"
+                        src="./assets/icons/favourite.png"
+                        onclick=("deleteFavorite("+index+")"))
 
         include ./footer.pug
