--- a/public/styles/errors.css
+++ b/public/styles/errors.css
@@ -1,7 +1,9 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Comfortaa:wght@700&family=M+PLUS+2:wght@200;300&family=Montserrat&family=Open+Sans:wght@800&family=Oswald:wght@200&family=Outfit:wght@300;700&family=Poppins:wght@400;900&family=Quicksand&family=Raleway:wght@300;900&family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
-:root{
-    font-family: 'Roboto Condensed', sans-serif; 
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Comfortaa:wght@700&family=Inter:wght@200&family=M+PLUS+2:wght@200;300&family=Montserrat&family=Open+Sans:wght@800&family=Oswald:wght@200&family=Outfit:wght@300;700&family=Poppins:wght@400;900&family=Quicksand&family=Raleway:wght@300;900&family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
+
+body{
+    background: black; 
+    font-family: 'Inter', sans-serif;
 }
 #mainErrorContainer{
     background: black;
@@ -12,10 +14,10 @@
     justify-content: space-around;
     width: 100vw;
     background: black;
-    font-family: 'Roboto Condensed', sans-serif; 
+    
 }
-.accessError{
-    font-family:'Montserrat', sans-serif; 
+a{
+    font-family: 'Roboto Condensed', sans-serif; 
     color: whitesmoke;
 }
 
@@ -23,8 +25,10 @@
     width: 100%;
 }
 
-.mainAccessError {
+h1 {
+    font-family: 'Inter', sans-serif;
     text-align: center;
     margin-bottom: 5rem;
     margin-top: 5rem;
+  
 }
