--- a/views/errors.pug
+++ b/views/errors.pug
@@ -1,6 +1,9 @@
 doctype html
 html
     head
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Comfortaa:wght@700&family=Inter:wght@200&family=M+PLUS+2:wght@200;300&family=Montserrat&family=Open+Sans:wght@800&family=Oswald:wght@200&family=Outfit:wght@300;700&family=Poppins:wght@400;900&family=Quicksand&family=Raleway:wght@300;900&family=Roboto&family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
         title= "Error"
         style 
             include ../public/styles/normalize.css
