--- a/views/users.pug
+++ b/views/users.pug
@@ -13,16 +13,15 @@ html
                 div(id= "users")
                     each user in users
                         a(href="#")
-                            div
-                                h3 Nombre: #{user.nombre}
-                                p Email: #{user.email}
-                                p Administrador: #{user.administrador}
-                                p Fecha de alta: #{user.fecha}
-                                p Avatar:
-                                img(src=user.img alt="Avatar del usuario")
+                            div(class="ficha")
+                                img(src=user.img alt="Avatar del usuario" class="avatar")
+                                p #[strong Nombre:] #{user.nombre}
+                                p #[strong Email:] #{user.email}
+                                p #[strong Administrador:] #{user.administrador}
+                                p #[strong Fecha de alta:] #{user.fecha.toString().substring(0,15)}
                                 button(type="button" class="edit" onClick=funcionEditar) Editar Usuario
                                 button(type="button" class="delete" onClick=funcionEliminar) Eliminar Usuario 
-                a(href="signup"): button Crear usuario 
+                a(href="signup"): button(class="create") Crear usuario 
             
         include ./footer.pug
 
