--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -70,12 +70,10 @@ li:hover {
     background-color:  rgb(255, 255, 255);
 }
 
- h1{
-    font-family: 'Montserrat', sans-serif;
-    margin-top: 0.5;
-    margin-left: 4rem;
-    color: white;
- }
+.title{
+    margin-left: auto;
+    margin-right: auto;
+}
 
  
  
