--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -5,38 +5,46 @@
     flex-direction: column;
     align-content: center;
 }
-.data {
-    display:flex;
-    flex-direction: column;
-    
-}
-input {
-    margin-top: 0.5rem;
-}
-form {
-    margin-top: 3rem;
-}
+
 h2 {
     text-align: center;
     margin:0.7rem;
     font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
+    font-size: 3.5rem;
     color: rgba(16, 0, 59, 0.952);
 }
 
 input {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
+    font-size: 3rem;
     border-style: solid;
     border-color: rgba(16, 0, 59, 0.952);
-    border-radius: 4px;
+    border-radius: 7px;
+    background-color: rgba(255, 255, 255, 0.25);
 }
-input.send {
-    width: 50%;
-    align-self: center;
-}
+
 input.send:hover {
     background-color: rgba(26, 0, 59, 0.952);
     color: white;
 
+}
+
+.login{
+    width: 80%;
+}
+
+.login *{
+    margin-bottom: 1rem;
+}
+
+button{
+    font-family: 'Montserrat', sans-serif;
+    height: 5vh;
+    border-radius: 1vh;
+    background-color: #3374ffa6;
+    box-shadow: inset -1px 3px 8px 5px #3374ff, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(255,255,255,0);
+    font-size: 3vh;
+    width: 35vw;
+    margin-left: auto;
+    margin-right: auto;
 }
