--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -5,44 +5,87 @@
     flex-direction: column;
     align-content: center;
 }
-.data {
-    display:flex;
-    flex-direction: column;
-    
-}
 input {
     margin-top: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.25);
 }
 form {
     margin-top: 3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3rem;
 }
 h2 {
-    text-align: left;
+    text-align: center;
     margin:0.7rem;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
+    font-size: 3.5rem;
     color: rgba(16, 0, 59, 0.952);
 }
 
 input {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
+    font-size: 3rem;
     border-style: solid;
     border-color: rgba(16, 0, 59, 0.952);
     border-radius: 7px;
 }
-button.send {
+button{
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
-    border-style: solid;
-    border-color: rgba(16, 0, 59, 0.952);
-    border-radius: 7px;
-    width: 50%;
-    align-self: center;
+    height: 5vh;
+    border-radius: 1vh;
+    background-color: #3374ffa6;
+    box-shadow: inset -1px 3px 8px 5px #3374ff, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(255,255,255,0);
+    font-size: 3vh;
+    width: 35vw;
 }
 button.send:hover {
     border-radius: 11px;
     background-color: rgba(26, 0, 59, 0.952);
     color: white;
 
+}
+
+.perfil{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.perfil p{
+    margin-left: auto;
+    margin-right: auto;
+    color: rgba(16, 0, 59, 0.952);
+}
+.avatar{
+    width: 40%;
+    border-radius: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.edit{
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+
+.edit *{
+    margin-bottom: 1rem;
+}
+
+.edit button{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+p.perfil {
+    color: rgba(16, 0, 59, 0.952);
+}
+
+.editbtn{
+    margin-top: 1rem;
 }
