--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -3,32 +3,40 @@
 h2 {
     margin:1vh;
     font-family: 'Montserrat', sans-serif;
-    font-size: 4vh;
+    font-size: 3.5rem;
     color: rgba(16, 0, 59, 0.952);
 }
-div#root{
-    display:flex;
-    flex-direction: column;
-}
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 3rem;
-    row-gap: 3vh;
-}
+
 div#userData {
     display:flex;
     flex-direction: column;
 }
-input.userData{
-    font-size: 3vh;
-}
 
 input {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
+    font-size: 3rem;
     border-style: solid;
     border-color: rgba(16, 0, 59, 0.952);
-    border-radius: 4px;
+    border-radius: 7px;
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
+.signup{
+    width: 80%;
+}
+
+.signup *{
+    margin-bottom: 1rem;
+}
+
+button{
+    font-family: 'Montserrat', sans-serif;
+    height: 5vh;
+    border-radius: 1vh;
+    background-color: #3374ffa6;
+    box-shadow: inset -1px 3px 8px 5px #3374ff, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(255,255,255,0);
+    font-size: 3vh;
+    width: 35vw;
+    margin-left: auto;
+    margin-right: auto;
 }
