--- a/public/styles/favorites.css
+++ b/public/styles/favorites.css
@@ -6,13 +6,23 @@
     display:flex;
     flex-direction: column;
 }
+
+h2 {
+    margin:1vh;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    color: rgba(16, 0, 59, 0.952);
+}
+
 h3 {
     font-size: 3vh;
+    font-family: 'Montserrat', sans-serif;
     color: rgba(16, 0, 59, 0.952);
     margin: 0%;
 }
 p {
     font-size: 2.5vh;
+    font-family: 'Montserrat', sans-serif;
     color: rgba(34, 34, 34, 0.993);
     margin: 0%;
 }
