retoques varios, creacion editar y eliminar user por parte del admin

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -61,7 +61,7 @@ div.eachOffer p{
 }
 input.icon {
     height: 4vh;
-    
+    margin: 0.7vh 0vh;
     margin-left:1vh; 
     font-family: 'Montserrat', sans-serif;
 }
