--- a/views/errors.pug
+++ b/views/errors.pug
@@ -15,7 +15,7 @@ html
         h1(class="mainAccessError") Usuario o password incorrectos 
         div(id="errorDiv")
             h1(class="accessError") 
-                a(class="accessError" href='/login') INICIA SESIÓN 
+                a(class="accessError" href='/login') Prueba de nuevo 
         div(id="errorCat")
             img(class="errorImage" src="https://http.cat/401", alt="error cat")
                         
