--- a/views/header.pug
+++ b/views/header.pug
@@ -13,17 +13,16 @@ header
                     a(href="/", ): li  Inicio 
                     if !log.loggedIn
                         a(href="/signup"): li Registro de usuario
-                        a(href="/login"): li Login
+                        a(href="/login"): li Iniciar sesión
                     if log.loggedIn
                         a(href="/favorites"): li Ofertas favoritas 
                         a(href="/profile"): li Perfil de usuario 
                                             
                     if log.admin
                         a(href="/users"): li Listado de usuarios 
-                        a(href="/dashboard"): li Crear oferta
+                        a(href="/dashboard"): li Ofertas EmpleApp
                     if log.loggedIn
                         a(href="/"): li 
                             form(action="/api/logout" method="POST" class="logout")
-                                input(type="submit" value="Logout" class="logout")
-    //- div(class="title") 
+                                input(type="submit" value="Cerrar sesión" class="logout")
     h1 EmpleApp   
