--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -162,5 +162,5 @@ p.footer {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5vh;
     color: white;
-    
+    margin-right: 7rem;    
 }
