--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,5 +1,5 @@
 
 footer
     div(class="footerContainer")
-        p(class="footer") Autores de la página:....
+        p(class="footer") Guillermo Rodríguez Canseco, Álvaro Arias Rivero, Alicia Rodríguez González © 2021
         
