cambiado botón favoritos por eliminar en ofertas favoritas

--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -24,7 +24,7 @@ html
                         id="favoriteIcon"
                         class="icon"
                         type="image"
-                        src="./assets/icons/favourite.png"
+                        src="./assets/icons/delete.png"
                         onclick=("deleteFavorite("+index+")"))
 
         include ./footer.pug
